# codesys-opcua-interface

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.demo.yml  docker-compose.yml  pyproject.toml
apps/web/: README.md  index.html  package.json  playwright.config.ts
codesys-control/docs/: CODESYS_CONTROL.md  TASKS.md
codesys-control/plcopen/: README.md  codesys-control.plcopen.xml
codesys-control/simulation/: scenarios.json
codesys-control/src/: FunctionBlocks.st  GVL.st  PRG_ColumnControl.st  PRG_Simulation.st  (+2 more)
codesys_opcua_interface/: __init__.py  codesys_project.py  command_model.py  control_math.py  demo.py  integrations.py  opcua_client.py  opcua_connector.py  opcua_nodes.py  opcua_simulator.py  platform_store.py  profile.py  redundancy.py
config/: codesys-profile.example.json  platform.example.json
docs/: ARCHITECTURE.md  CURRENT_STATE.md  DECISIONS.md  GAP_ANALYSIS.md  GIT_PUSH_PENDING.md  GRAFANA_NODE_RED.md  HITO9_TEST_REPORT.md  IMPLEMENTATION_PLAN.md  OPCUA_CONNECTOR.md  SECURITY.md  TEST_REPORT.md  WEB_PLATFORM.md
mosquitto/: mosquitto.conf
reverse-proxy/: nginx.conf
scripts/: backup_demo.py  generate_plcopen.py  load_test.py  restore_demo.py  security_audit.py
services/: __init__.py
tests/: test_api_app.py  test_codesys_project.py  test_command_and_redundancy.py  test_control_math.py  test_hito5_workflows.py  test_hito7_integrations.py  test_hito8_packaging.py  test_hito9_quality.py  test_opcua_client.py  test_opcua_connector.py  test_opcua_nodes.py  test_platform_store.py  test_profile.py  test_web_source.py
(+30 files in other folders)
