[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codesys-opcua-interface"
version = "0.1.0"
description = "Perfil seguro de integracion CODESYS via OPC UA para columnas de lixiviacion"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
opcua = ["asyncua>=1.1"]
test = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
