[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codesys-opcua-interface"
version = "0.5.0"
description = "Perfil seguro de integracion CODESYS via OPC UA para columnas de lixiviacion"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "pydantic>=2",
  "uvicorn>=0.29"
]

[project.optional-dependencies]
opcua = ["asyncua>=1.1"]
test = ["pytest>=8", "httpx>=0.27"]
db = ["sqlalchemy>=2.0", "alembic>=1.13", "psycopg[binary]>=3.2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
